// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldGrid-sc-11od8ug-1 keXRjE"
  id="Group 1"
  rows={null}
>
  <h5
    className="Typography__TitleText-sc-19auepv-2 dTLbTf Field__GroupTitle-sc-11od8ug-2 hDNWii"
    fontSize="1.15rem"
    fontWeight="500"
    letterSpacing="0.4px"
  >
    This is the first group
  </h5>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 bviaEQ"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 ePEGIf Field__FieldLabel-sc-11od8ug-3 fFfgEj"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 bviaEQ"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 ePEGIf Field__FieldLabel-sc-11od8ug-3 fFfgEj"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 bviaEQ"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 ePEGIf Field__FieldLabel-sc-11od8ug-3 fFfgEj"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    />
  </section>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldGrid-sc-11od8ug-1 keXRjE"
  id={null}
  rows={null}
>
  <h5
    className="Typography__TitleText-sc-19auepv-2 dTLbTf Field__GroupTitle-sc-11od8ug-2 hDNWii"
    fontSize="1.15rem"
    fontWeight="500"
    letterSpacing="0.4px"
  >
    Fields via Array
  </h5>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 bviaEQ"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 ePEGIf Field__FieldLabel-sc-11od8ug-3 fFfgEj"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 bviaEQ"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 ePEGIf Field__FieldLabel-sc-11od8ug-3 fFfgEj"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 bviaEQ"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 ePEGIf Field__FieldLabel-sc-11od8ug-3 fFfgEj"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldGrid-sc-11od8ug-1 keXRjE"
  id={null}
  rows={null}
>
  <h5
    className="Typography__TitleText-sc-19auepv-2 dTLbTf Field__GroupTitle-sc-11od8ug-2 hDNWii"
    fontSize="1.15rem"
    fontWeight="500"
    letterSpacing="0.4px"
  >
    Inline Fields (Default)
  </h5>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 bviaEQ"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 ePEGIf Field__FieldLabel-sc-11od8ug-3 fFfgEj"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 bviaEQ"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 ePEGIf Field__FieldLabel-sc-11od8ug-3 fFfgEj"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 bviaEQ"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 ePEGIf Field__FieldLabel-sc-11od8ug-3 fFfgEj"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-4 lnIMQZ"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
</section>
`;
